# A-Compliance-Operator-Based-Approach-for-Dynamic-Simulation-of-Flexible-Bodies

./: LICENSE  README.md
code/: MLP.py  gen_mat.py  generate2.py  main_big.py  test.py  train_model.py
文档/: CMakeLists.txt  GPU+单次初始化版本.txt  主脚本说明.md  数据集生成脚本说明.md  训练脚本说明.md
柔度算子法/: 3s.txt  GPU推理性能报告.md  evaluate_model.py  export_pt.py  gen_data.py  gen_data_mat.py  generate.py  inference.cpp  main.py  nn与有限元.txt  psdLoad.py  selectSurface.py  t.txt  tool.py  命令.txt  总结.md  总结.txt  神经网络与有限元类比.md  调参指南.md
